[package]
name = "fin_health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
teloxide = { version = "0.13", features = ["macros", "sqlite-storage-rustls"] }
pretty_env_logger = "0.5"
tokio = { version =  "1.41.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive", "serde_derive"] }
rusqlite = { version = "0.30"}
serde_json = "1.0.132"
serde_repr = "0.1"
chrono = { version = "0.4.38", features = ["serde"] }
strum = "0.26.3"
strum_macros = "0.26.4"
plotters = "0.3.7"
bytes = "1.8.0"
image = "0.25.5"
itertools = "0.10.5"
uuid = { version = "1.11.0", features = ["v4"] }
