[package]
name = "fin_health"
version = "0.1.0"
edition = "2021"

[[bin]]
name="fin_health_2024-11-30"
path="src/main.rs"

#CROSS_CONTAINER_OPTS="--platform linux/amd64" cross build --target x86_64-unknown-linux-gnu -v
#[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
#pre-build = ["""
#    dpkg --add-architecture $CROSS_DEB_ARCH &&
#    apt-get update &&
#    apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH &&
#    apt --assume-yes install pkg-config:$CROSS_DEB_ARCH &&
#    apt --assume-yes install libfontconfig1-dev:$CROSS_DEB_ARCH pkg-config fontconfig libfontconfig-dev &&
#    apt-get --assume-yes install --reinstall --purge fontconfig-config:$CROSS_DEB_ARCH &&
#    export PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig:$PKG_CONFIG_PATH"
#"""
#]

[dependencies]
teloxide = { version = "0.13", features = ["macros", "sqlite-storage-rustls"] }
pretty_env_logger = "0.5"
tokio = { version =  "1.41.0", features = ["rt-multi-thread", "macros"] }
log = "0.4.22"
serde = { version = "1.0.213", features = ["derive", "serde_derive"] }
rusqlite = { version = "0.30"}
serde_json = "1.0.132"
chrono = { version = "0.4.38", features = ["serde"] }
strum = "0.26.3"
strum_macros = "0.26.4"
plotters = "0.3.7"
bytes = "1.8.0"
image = "0.25.5"
itertools = "0.13.0"
uuid = { version = "1.11.0", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
